--- a/play.html
+++ b/play.html
@@ -54,7 +54,7 @@ var doLoadScripts = true // should we load scripts?
 var doUpdateCritters = false // should we give critters heartbeats?
 var doTimedEvents = true // should we handle registered timed events?
 var doCombat = true // allow combat?
-var doUseWeaponModel = false // use weapon model for NPC models?
+var doUseWeaponModel = true // use weapon model for NPC models?
 var doLoadItemInfo = true // load item information (such as inventory images)?
 var doAlwaysRun = true // always run instead of walk?
 
