--- a/play.html
+++ b/play.html
@@ -447,7 +447,7 @@ function changeElevation(level, updateScripts) {
 
 	if(updateScripts !== false) {
 		loadObjectScripts(gObjects)
-		scriptingEngine.enterMap(gMapScript, gObjects, currentElevation, gMap.mapID) // ?
+		scriptingEngine.enterMap(gMapScript, gObjects, currentElevation, gMap.mapID, false) // ?
 		scriptingEngine.updateMap(gMapScript, gObjects, currentElevation)
 	}
 
@@ -591,7 +591,7 @@ function loadMap(mapName, startingPosition, startingElevation) {
 
 			changeElevation(elevation, false)
 			loadObjectScripts(gObjects)
-			scriptingEngine.enterMap(gMapScript, gObjects, elevation, gMap.mapID)
+			scriptingEngine.enterMap(gMapScript, gObjects, elevation, gMap.mapID, true)
 			scriptingEngine.updateMap(gMapScript, gObjects, elevation)
 		}
 		else changeElevation(elevation, false)
