--- a/play.html
+++ b/play.html
@@ -961,24 +961,26 @@ heart.draw = function() {
 		heart.graphics.print("tile: " + tileImg, 5, 60)
 	}
 
-	for(var i = 0; i < floatMessages.length; i++) {
-		var bbox = objectBoundingBox(floatMessages[i].obj)
-		heart.graphics.print(floatMessages[i].msg, bbox.x - cameraX, bbox.y - cameraY - 16)
-	}
-
 	if(inCombat === true) {
 		var whose = combat.whoseTurn === -1 ? "player" : combat.combatants[combat.whoseTurn].art
 		var AP = combat.whoseTurn === -1 ? player.AP : combat.combatants[combat.whoseTurn].AP
 		heart.graphics.print("[turn " + combat.turnNum + " of " + whose + " AP: " + AP.getAvailableMoveAP() + "]", SCREEN_WIDTH - 200, 15)
 	}
 
+	heart.graphics.print("mh: " + mouseHex.x + "," + mouseHex.y, 5, 15)
+	heart.graphics.print("mt: " + mouseTile.x + "," + mouseTile.y, 100, 15)
+
+	for(var i = 0; i < floatMessages.length; i++) {
+		var bbox = objectBoundingBox(floatMessages[i].obj)
+		heart.ctx.fillStyle = floatMessages[i].color
+		var centerX = bbox.x - bbox.w/2 - cameraX
+		heart.graphics.print(floatMessages[i].msg, centerX, bbox.y - cameraY - 16)
+	}
+
 	if(player.dead === true) {
 		heart.graphics.setColor(255, 0, 0, 50)
 		heart.graphics.rectangle("fill", 0, 0, SCREEN_WIDTH, SCREEN_HEIGHT)
 	}
-
-	heart.graphics.print("mh: " + mouseHex.x + "," + mouseHex.y, 5, 15)
-	heart.graphics.print("mt: " + mouseTile.x + "," + mouseTile.y, 100, 15)
 }
 
 function dialogueReply(id) {
